[tool.poetry]
name = "omnis-notes"
version = "0.1.0"
description = ""
authors = ["Xin Lin <107877611+xlinzh@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "omnis_notes"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^8.5.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
